Fix too much padding

--- a/public/style.css
+++ b/public/style.css
@@ -74,7 +74,7 @@ body {
 .wrapper {
   min-height: var(--wrapper-height);
   place-items: center;
-  margin: 3rem 2rem 0;
+  margin: .1rem;
 }
 .content {
   display: flex;
